# advent_of_code_2022

./: pyproject.toml
advent/: calories.py  camp_cleanup.py  cli.py  comm_device.py  cpu.py  main.py  monkeys.py  rock_paper_scissors.py  rope.py  rucksack.py  stacks.py  storage_device.py  trees.py  utils.py
data/: monkeys.txt  rope_demo2.txt
tests/: test_camp_cleanup.py  test_comm_device.py  test_cpu.py  test_monkeys.py  test_rock_paper_scissors.py  test_rope.py  test_rucksack.py  test_stacks.py  test_storage_device.py  test_trees.py
