[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Nicholas von Waltsleben"]
readme = "README.md"
packages = [{include = "advent"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ptpython = "^3.0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
